Ip linux teste